common/src/form/tests/derive/empty_tag.stderr
error: New name cannot be empty
  --> $DIR/empty_tag.rs:19:12
   |
19 |     #[form(tag = "")]
   |            ^^^^^^^^
